# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AverageDailyController;
 use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -8,3 +9,4 @@ use App\Http\Controllers\CollectDataController;
 
 Route::post('/send_collect_data', [CollectDataController::class, 'SendCollectData']);
 Route::get('/get_collect_data', [CollectDataController::class, 'GetAllCollectData']);
+Route::get('/get_average_daily', [AverageDailyController::class, 'GetAverageDaily']);
